feat(venues): implement venue intent v2
